This is my fourth upload

--- a/second.ipynb
+++ b/second.ipynb
@@ -27,6 +27,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123 123.456 123\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 123\n",
+    "y = 123.456\n",
+    "z = '123'\n",
+    "print(x,y,z)\n",
+    "sign_up = True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'> <class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(x),type(z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sign_up\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"sign_up\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(sign_up))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "246.45600000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x+y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
